View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024881 | Open CASCADE | OCCT:Shape Healing | public | 2014-04-29 17:17 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0024881: Wrong status returned by ShapeFix_Wire::FixGaps3d () operation | ||||
Description | Attempt to apply ShapeFix_Wire::FixGaps3d () to a valid shape returns wrong status FAIL2 (ShapeAnalysis_WireOrder failed). As input shape can be used any valid shape, for example ordinary Box. | ||||
Steps To Reproduce | To reproduce the specified problem the attached script Test.bat can be used. Before using the script it is necessary to open the Test.bat file and modify environment variable PRODROOT (it should point to OCCT root directory. cmd> Test.bat box.brep //================================================= Before the fix: "Fix_FillGaps_3dSomeGapsFail, nb failed = 6" After the fix: "Fix_FillGaps_NothingToDo" | ||||
Tags | No tags attached. | ||||
Test case number | bugs heal(017) bug24881 | ||||
2014-04-29 17:17 manager |
Test.bat (7,193 bytes) |
|
Is this issue still relevant?? |
|
Branch CR24881 has been created by akz. SHA-1: d2d98f03cf5c77fa4d542306c18f09f7227235c6 Detailed log of new commits: Author: akz Date: Tue Feb 10 11:47:42 2015 +0300 0024881: Wrong status returned by ShapeFix_Wire::FixGaps3d () operation The reason of FAIL status of FixGaps3d is that the trying to convert curves to BSplines on valid edges (both adjacent points saticfy a precision) leads to skipping of the convertation and gives wrong status. Check of the gap on adjacent points before try ro convert curves was added. |
|
Branch CR24881 is ready to review. |
|
Branch CR24881 is ready to be tested |
|
Branch CR24881 has been updated by apv. SHA-1: 2ede141f776248f8e0c9879b73ddb8c650f60b05 Detailed log of new commits: Author: apv Date: Thu Feb 12 11:17:30 2015 +0300 Test-case for issue 0024881 |
|
Dear BugMaster, Branch CR24881 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: d2d98f03cf5c77fa4d542306c18f09f7227235c6 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: Not detected Testing cases: bugs heal(017) bug24881 - OK http://occt-tests/CR24881-master-occt/Debian60-64/bugs/heal/bug24881.html http://occt-tests/CR24881-master-occt/Windows-32-VC10/bugs/heal/bug24881.html Testing on Linux: Total MEMORY difference: 86193499 / 86229117 Total CPU difference: 48746.729999999894 / 47876.709999999846 Testing on Windows: Total MEMORY difference: 40648511 / 40658608 Total CPU difference: 38009.140625 / 32754.1875 |
|
Branch CR24881 has been deleted by inv. SHA-1: 2ede141f776248f8e0c9879b73ddb8c650f60b05 |
occt: master 2bfe59b6 2015-02-12 09:08:05
Committer: bugmaster Details Diff |
0024881: Wrong status returned by ShapeFix_Wire::FixGaps3d () operation The reason of FAIL status of FixGaps3d is that the trying to convert curves to BSplines on valid edges (both adjacent points saticfy a precision) leads to skipping of the convertation and gives wrong status. Check of the gap on adjacent points before try ro convert curves was added. Test-case for issue 0024881 |
Affected Issues 0024881 |
|
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
mod - src/ShapeFix/ShapeFix_Wire_1.cxx | Diff File | ||
add - tests/bugs/heal/bug24881 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-29 17:17 |
|
New Issue | |
2014-04-29 17:17 |
|
Assigned To | => gka |
2014-04-29 17:17 |
|
File Added: Test.bat | |
2014-09-26 12:05 |
|
Note Added: 0032214 | |
2014-09-26 12:05 |
|
Target Version | 6.8.0 => 7.1.0 |
2015-01-22 11:00 |
|
Assigned To | gka => akz |
2015-01-22 11:00 |
|
Status | new => assigned |
2015-02-10 11:55 | git | Note Added: 0037271 | |
2015-02-10 11:56 |
|
Note Added: 0037273 | |
2015-02-10 11:56 |
|
Assigned To | akz => gka |
2015-02-10 11:56 |
|
Status | assigned => resolved |
2015-02-10 11:56 |
|
Steps to Reproduce Updated | |
2015-02-10 12:52 |
|
Note Added: 0037281 | |
2015-02-10 12:52 |
|
Assigned To | gka => bugmaster |
2015-02-10 12:52 |
|
Status | resolved => reviewed |
2015-02-10 13:00 |
|
Assigned To | bugmaster => apv |
2015-02-12 11:16 |
|
Test case number | => bugs heal(017) bug24881 |
2015-02-12 11:17 | git | Note Added: 0037409 | |
2015-02-12 11:21 |
|
Note Added: 0037411 | |
2015-02-12 11:21 |
|
Assigned To | apv => bugmaster |
2015-02-12 11:21 |
|
Status | reviewed => tested |
2015-02-13 17:55 | bugmaster | Changeset attached | => occt master 2bfe59b6 |
2015-02-13 17:55 | bugmaster | Status | tested => verified |
2015-02-13 17:55 | bugmaster | Resolution | open => fixed |
2015-03-10 12:59 | bugmaster | Target Version | 7.1.0 => 6.9.0 |
2015-03-18 13:32 | git | Note Added: 0038491 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |